--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,8 @@
 ---
+import BlogPost from '../components/BlogPost.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Mi blog de aprendizaje"
-const allPost = await Astro.glob("../pages/posts/*.md")
+const allPosts = await Astro.glob("../pages/posts/*.md")
 ---
 
 <BaseLayout pageTitle={pageTitle}>
@@ -12,7 +13,10 @@ const allPost = await Astro.glob("../pages/posts/*.md")
       <!-- <li><a href="/posts/post-1/">Publicación 1</a></li>
       <li><a href="/posts/post-2/">Publicación 2</a></li>
       <li><a href="/posts/post-3/">Publicación 3</a></li> -->
-    {allPost.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+      <BlogPost></BlogPost>
+    <!-- {allPost.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+      -->
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
  
 </BaseLayout>
