--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,21 +2,18 @@
 import BlogPost from '../components/BlogPost.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Mi blog de aprendizaje"
+
 const allPosts = await Astro.glob("../pages/posts/*.md")
+const {ruta} = Astro.props
+
 ---
 
 <BaseLayout pageTitle={pageTitle}>
       
-  
+  <a href={`/home/${ruta}`}>click</a>
   <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
    <ul>
-      <!-- <li><a href="/posts/post-1/">Publicación 1</a></li>
-      <li><a href="/posts/post-2/">Publicación 2</a></li>
-      <li><a href="/posts/post-3/">Publicación 3</a></li> -->
-      <BlogPost></BlogPost>
-    <!-- {allPost.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
-      -->
-    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+      {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
  
 </BaseLayout>
