--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
 const pageTitle = "Pagina de inicio"
+
+const dogs = "Gato"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
