fin del proceso

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
 import Hamburguesa from './Hamburguesa.astro';
 import Navegacion from './Navegacion.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 <header>
     <nav>
         <Hamburguesa/>
+        <ThemeIcon/>
         <Navegacion/>
     </nav>
 </header>
