--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -9,7 +9,7 @@ const pageTitle = "indice de paginas"
 <BaseLayout pageTitle={pageTitle}>
 
     <div class="tags">{tags.map((tag)=>(
-        <p class="tag"><a href={`/tags/${tag}`}>{tag}</a>{console.log(tag)}</p>
+        <p class="tag"><a href={`/tags/${tag}`}>{tag}</a>{tag}</p>
     ))}</div>
 
 </BaseLayout>
