--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,13 @@
 import BaseLayout from '../layouts/BaseLayout.astro'
 const pageTitle = "Pagina de inicio"
 
-const dogs = "Gato"
+import Greeting from '../components/Greeting';
 ---
 
 <BaseLayout pageTitle={pageTitle}>
     <h2>Mi impresionante subtítulo del blog</h2>
+    
+    <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+
+
 </BaseLayout>
